--- a/app/ui/char-hud.css
+++ b/app/ui/char-hud.css
@@ -69,11 +69,13 @@
 	background-position: -16px -64px;
 }
 
+.hud .char-icon.player-2,
 .hud .char-icon.seymour {
 	background-image: url(/Sonic/monitor-screens.png);
 	background-position: -32px -64px;
 }
 
+.hud .char-icon.player-1,
 .hud .char-icon.chalmers {
 	background-image: url(/Sonic/monitor-screens.png);
 	background-position: -16px -80px;
