--- a/app/region/region.css
+++ b/app/region/region.css
@@ -28,9 +28,13 @@
 
 	bottom: calc( var(--bottomBoundary) + 1px);
 
-	left: max(0.00001px, var(--leftBoundry) + 16px);
+	left: max(0.00001px, var(--leftBoundry));
 
-	width: min(calc(var(--width) * 1px), var(--viewportWidth), calc(calc(var(--widthPx) - var(--leftBoundry)) - 16px));
+	width: min(
+		calc(var(--width) * 1px)
+		, calc(calc(16px * var(--scale)) + var(--viewportWidth))
+		, calc(var(--widthPx) - var(--leftBoundry))
+	);
 
 	height: auto;
 
@@ -40,6 +44,7 @@
 
 .region.region-water .sprite {
 	top: calc( calc( calc(-1px * var(--height)) + max(0.00001px, var(--topBoundry))) - 16px);
+	bottom: calc( var(--bottomBoundary) - 16px);
 }
 
 .region.region-water .region-color-wrapper {
