--- a/app/Menu/menu.css
+++ b/app/Menu/menu.css
@@ -36,3 +36,7 @@
 		drop-shadow(1px 1px 1px rgba(0,0,0,0.75))
 		drop-shadow(0px 0px 1px rgba(0,0,0,0.75));
 }
+
+.pause-menu-hide {
+	opacity: 0;
+}
