--- a/app/actor/sonic.css
+++ b/app/actor/sonic.css
@@ -109,6 +109,11 @@
 	top: 10px;
 }
 
+.actor-item.actor-sonic[data-animation="dash"][data-falling="false"] .sprite:after {
+	top: 05px;
+}
+
+.actor-item.actor-sonic[data-animation="dash"] .sprite:after,
 .actor-item.actor-sonic[data-animation="airdash"] .sprite:after,
 .actor-item.actor-sonic[data-animation="lightdash"] .sprite:after {
 	--sprite-offset-x: -0px;
@@ -121,14 +126,14 @@
 	--sprite-offset-x: -0px;
 	--sprite-offset-y: -448px;
 
-	transform: translateY(32px) rotate(calc(1rad * var(--air-angle)));
+	transform: translateY(32px) rotate(calc(1rad * var(--ground-angle)));
 
 	animation: sonic-wall-stick steps(2) 1 384ms forwards;
 }
 
 .actor-item.actor-sonic[data-animation="wall-stick"][data-facing="right"][data-mode="1"] .sprite:after,
 .actor-item.actor-sonic[data-animation="wall-stick"][data-facing="left"][data-mode="3"] .sprite:after {
-	transform: translateY(32px) rotate(calc(1rad * var(--air-angle))) scaleX(-1);
+	transform: translateY(32px) rotate(calc(1rad * var(--ground-angle))) scaleX(-1);
 }
 
 .actor-item.actor-sonic[data-facing="left"][data-animation="airdash"] .sprite:after {
