--- a/app/powerups/sheild.css
+++ b/app/powerups/sheild.css
@@ -26,7 +26,11 @@
 	width: 48px;
 	height: 48px;
 	background-position: -48px 0;
-	animation: water-sheild-rotate 0.5s steps(9) infinite;
+	animation: water-sheild-rotate 0.5s steps(9) infinite reverse;
+
+	/*animation: water-sheild-rotate 0.32s steps(9) infinite reverse;
+	background-image: url(/Sonic/super-shine.png);
+	opacity: var(--animation-bias);*/
 }
 
 .electric-sheild {
