--- a/app/region/region.css
+++ b/app/region/region.css
@@ -44,7 +44,7 @@
 
 .region.region-water .sprite {
 	top: calc( calc( calc(-1px * var(--height)) + max(0.00001px, var(--topBoundry))) - 16px);
-	bottom: calc( var(--bottomBoundary) - 16px);
+	bottom: calc( var(--bottomBoundary));
 }
 
 .region.region-water .region-color-wrapper {
@@ -53,7 +53,7 @@
 	left:   0;
 	right:  0;
 	top:    12px;
-	bottom: 48px;
+	bottom: 64px;
 }
 
 .region.region-lava .region-color-wrapper {
