--- a/app/ui/hud-frame.css
+++ b/app/ui/hud-frame.css
@@ -48,7 +48,7 @@
 	position: absolute;
 	bottom: 5px;
 	left: 5px;
-	height: 28px;
+	height: 36px;
 	overflow: hidden;
 	transform-origin: bottom left;
 	justify-content: flex-start;
@@ -56,19 +56,18 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	filter: brightness(0);
+	/*filter: brightness(0);*/
 	border-top-left-radius: 19px !important;
 	border-bottom-left-radius: 18px !important;
-	transform: scale(0.5, 0.5) translateX(-120%);
+	transform: scale(var(--scale)) translateX(-120%) !important;
 	transition: transform 0.5s ease-in, filter 0.75s 0.25s ease-in;
 	transition: transform 0.75s ease-in, filter 0.5s ease-in;
 }
 
 .hud-bottom-left {
-	transform: scale(0.5, 0.5) translateX(-120%);
-	transition: transform 0.5s ease-out, filter 0.75s ease-in;
-	/*filter: brightness(1);
-	transform: scale(0.5, 0.5);*/
+	transition: transform 0.5s ease-out, filter 0.75s ease-in !important;;
+	/*transform: scale(var(--scale)) translateX(0%) !important;*/
+	/*transform: scale(0.5, 0.5);*/
 }
 
 .hud-bottom-left > .hud-character-string {
@@ -82,7 +81,7 @@
 	left: -0px;
 	top: 0px;
 	background-image: url(/Sonic/headphones.png);
-	background-color: rgba(255,255,255,0.5);
+	background-color: rgba(255,255,0,0.65);
 	background-repeat: no-repeat;
 	background-position: center;
 	border-radius: 50%;
