--- a/app/viewport/viewport-theme-construct.css
+++ b/app/viewport/viewport-theme-construct.css
@@ -1,10 +1,28 @@
 .viewport.construct {
-	background-color: #400;
+	background-color: #411 !important;
 }
 
-.viewport.construct .viewport-background[data-layer="0"] > div {
-	/*box-shadow: inset 0 0 4px rgba(0,255`,0,0.4);*/
-	/*box-shadow: inset 0 0 4px rgba(255,0,0,0.4);*/
-	border-top: 0.5px solid #050;
-	border-left: 0.5px solid #050;
+.viewport.construct .viewport-background[data-name^="Destructible"] > div,
+.viewport.construct .viewport-background[data-name^="Collision"] > div {
+	/*border: 1px solid #050;*/
+	box-shadow: inset 0 0 1.5px rgba(0,255,0,0.75);
+	/*--distX: calc(calc(calc(var(--screenX)*var(--screenX))*var(--screenX))*var(--screenX));
+	--distY: calc(calc(calc(var(--screenY)*var(--screenY))*var(--screenY))*var(--screenY));
+	--dist: calc(var(--distX)*var(--distY));*/
+
+	/*--outline-color: rgba(
+		0
+		, calc(128 + calc( -255 * var(--distX) ))
+		, 0
+		, calc(0.75 * calc( 1 - var(--distY)))
+	);*/
+
+	/*--outline-color: #030;
+
+	filter:
+		drop-shadow(-1px  1px 0px var(--outline-color))
+		drop-shadow(-1px -1px 0px var(--outline-color))
+		drop-shadow( 1px  1px 0px var(--outline-color))
+		drop-shadow( 1px -1px 0px var(--outline-color))
+	;*/
 }
