--- a/app/viewport/viewport.css
+++ b/app/viewport/viewport.css
@@ -602,3 +602,11 @@ input[type=number]::-webkit-outer-spin-button {
 .viewport.mouse-hide .labels {
 	display: none;
 }
+
+.actor-selected {
+	z-index: 1;
+}
+
+.actor-item[data-active=true] {
+	z-index: 2;
+}
