--- a/app/particle/bubble.css
+++ b/app/particle/bubble.css
@@ -1,8 +1,8 @@
 .particle-bubble {
-	z-index: 10;
+	z-index: 4000000;
 	position: relative;
 	will-change: left;
-	opacity: 0.75;
+	opacity: 0.5;
 	width: 64px;
 	height: 64px;
 }
