--- a/app/viewport/viewport-theme-none.css
+++ b/app/viewport/viewport-theme-none.css
@@ -1,3 +1,4 @@
-.viewport.none .viewport-bg-layers [data-name^="Collision"] {
-	/*display: none;*/
+/*.viewport.none .viewport-bg-layers [data-name^="Collision"] {
+	display: none;
 }
+*/
