--- a/app/actor/sonic.css
+++ b/app/actor/sonic.css
@@ -35,7 +35,6 @@
 }
 
 .actor-item.actor-sonic .sprite:before {
-
 	content: '';
 	position: absolute;
 	top: 0px;
@@ -67,6 +66,16 @@
 	--sprite-offset-y: 0px;
 }
 
+.actor-item.actor-sonic[data-animation="crouching"] .sprite:after {
+	--sprite-offset-x: -64px;
+	--sprite-offset-y: -576px;
+}
+
+.actor-item.actor-sonic[data-animation="looking-up"] .sprite:after {
+	--sprite-offset-x: 0px;
+	--sprite-offset-y: -576px;
+}
+
 .actor-item.actor-sonic[data-animation="walking"] .sprite:after {
 	--sprite-offset-x: 0px;
 	--sprite-offset-y: -64px;
@@ -90,14 +99,14 @@
 	animation: sonic-drop steps(1) 1 80ms forwards;
 }
 
-.actor-item.actor-sonic[data-falling="true"][data-animation="wall-dropping"] .sprite:after {
+/*.actor-item.actor-sonic[data-falling="true"][data-animation="wall-dropping"] .sprite:after {
 	transform: rotate(calc(1rad * var(--ground-angle))) translateX(32px);
-}
+}*/
 
 
-.actor-item.actor-sonic[data-falling="true"][data-facing="left"][data-animation="wall-dropping"] .sprite:after {
+/*.actor-item.actor-sonic[data-falling="true"][data-facing="left"][data-animation="wall-dropping"] .sprite:after {
 	transform: rotate(calc(-1rad * var(--ground-angle))) translateX(32px);
-}
+}*/
 
 .actor-item.actor-sonic[data-animation="spindash"] .sprite:after {
 	--sprite-offset-x: -0px;
@@ -126,7 +135,7 @@
 	--sprite-offset-x: -0px;
 	--sprite-offset-y: -448px;
 
-	transform: translateY(32px) rotate(calc(1rad * var(--ground-angle)));
+	transform: scale(-1,-1) translateY(-32px) rotate(calc(calc(-1rad * var(--air-angle)) + 180deg));
 
 	animation: sonic-wall-stick steps(2) 1 384ms forwards;
 }
@@ -150,7 +159,7 @@
 
 	transform: scale(1,-1) rotate(calc(calc(1rad * var(--air-angle)) + 180deg));
 
-	animation: sonic-flicker steps(4) infinite 128ms;
+	animation: sonic-flicker steps(4) infinite 64ms;
 }
 
 .actor-item.actor-sonic[data-animation="lightdash-back"] .sprite:after {
@@ -159,7 +168,7 @@
 
 	transform: scale(1,-1) rotate(calc(calc(-1rad * var(--air-angle)) + 0deg));
 
-	animation: sonic-flicker steps(4) infinite 128ms;
+	animation: sonic-flicker steps(4) infinite 64ms;
 }
 
 .actor-item.actor-sonic[data-facing="left"][data-animation="lightdash-back"] .sprite:after {
@@ -168,7 +177,7 @@
 
 	transform: scale(-1,-1) rotate(calc(calc(-1rad * var(--air-angle)) + 0deg));
 
-	animation: sonic-flicker steps(4) infinite 128ms;
+	animation: sonic-flicker steps(4) infinite 64ms;;
 }
 
 
@@ -279,8 +288,8 @@
 	from{
 		filter: brightness(1);
 	}
-	75%{
-		filter: brightness(1.1);
+	50%{
+		filter: brightness(2);
 	}
 	to{
 		filter: brightness(10);
